# blib

./: .gitignore  2  CMakeLists.txt  LICENSE  README.md  ]  build.sh  config.sh
.cache/clangd/index/: blib.c.8A13E6A737F8FBF9.idx  blib.h.F8EA0F1835C62C6D.idx  context.c.0801EA708E407998.idx  egl_context.c.38D471588D4C2E0D.idx  example.c.63DF2D8480AF7A7A.idx  glad.c.F3F5EF9E20B51064.idx  glad.h.CAC14E2A8A8E4E65.idx  glfw3.h.D5FED9CFD14B3FEB.idx  glx_context.c.0E125C7B0719780B.idx  init.c.F9FF873DBA691D9C.idx  input.c.F25AF4B62A51CE4F.idx  internal.h.CB012623D911A6B9.idx  khrplatform.h.9E331F27650DF1C4.idx  linux_joystick.c.145F85231B46AF3B.idx  linux_joystick.h.951762D555D8B5F2.idx  mappings.h.70772693037E17A0.idx  monitor.c.00558606276D650D.idx  null_init.c.F7C40788D733B50B.idx  null_joystick.c.8314E7CDF76E393F.idx  null_joystick.h.D48408348197C6B2.idx  null_monitor.c.19C9E55854AE0BDD.idx  null_platform.h.69D78ACA225BCF95.idx  null_window.c.82440EEF20361FC0.idx  osmesa_context.c.0769475DDD21A491.idx  platform.c.DE5FF3450B789437.idx  platform.h.DFA240F0A4659576.idx  posix_module.c.8E3ED7E7F7E6AFC6.idx  posix_poll.c.C20C70E302F98F28.idx  posix_poll.h.491B5C4AA076E564.idx  posix_thread.c.B0F4297CC881ACBE.idx  posix_thread.h.0897F84C2BEE547E.idx  posix_time.c.C2E97A928C09C5D8.idx  posix_time.h.D5862EFE98058936.idx  vulkan.c.D7BAE4BFF8A773D1.idx  window.c.D909ABE7CCB0DC31.idx  x11_init.c.C2F24EC8CBFDFA49.idx  x11_monitor.c.BD9057E8F9063787.idx  x11_platform.h.1E1854A2A6F47CBB.idx  x11_window.c.8B7D57382E1184B4.idx  xkb_unicode.c.A6738C31EDBFC262.idx  (+1 more)
assets/atlases/: cookie.aseprite
assets/shaders/basic_geo/: vertex.glsl
assets/shaders/quad/: fragment.glsl  vertex.glsl
assets/shaders/texture/: fragment.glsl  vertex.glsl
examples/: engine3d.c  example.c
examples/devember/: asteroids.c  berzerk.c  breakout.c  cookie.c  flappybird.c  frogger.c  games  invaders.c  minesweeper.c  pacman.c  pong.c  snake.c  tictactoe.c  trex.c
src/: blib.c  blib.h
